footer: fix alignment of login/sign up buttons
...By pushing them all the way to the left with the "You need to
log in" text (using flex-grow). That text now needs to be justified
to the right so it looks the same as before :)

--- a/src/components/FooterBar/index.css
+++ b/src/components/FooterBar/index.css
@@ -12,7 +12,9 @@
     padding: 0 25px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     height: 100%;
+    flex-grow: 1;
   }
 
   @descendent user {
